# xslt-to-target-migration

./: .env.example  .gitignore  MIGRATION_NOTES.md  MIGRATION_PLAN.md  MIGRATION_PLAN_OVERVIEW.md  README.md  README_FOUNDATION.md  README_IMPLEMENTATION.md  STEP_1_GUIDE.md  STEP_2_GUIDE.md  STEP_3_GUIDE.md  STEP_4_GUIDE.md  STEP_5_GUIDE.md  STEP_6_GUIDE.md  STEP_7_GUIDE.md  pyproject.toml  requirements.txt
.github/: MIGRATION_TRACKING.md
src/: config.py  database.py  main.py
src/api/: auth.py  home.py  users.py
src/controllers/: user_controller.py
src/middleware/: auth.py
src/models/: base.py  user.py
src/services/: template.py  user_service.py
src/utils/: security.py
tests/: conftest.py  test_user.py
tests/api/: test_auth.py  test_users.py
