[tool.poetry]
name = "migrated-codebase"
version = "1.0.0"
description = "Migrated codebase"
authors = ["Migration Tool"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
mypy = "^1.6.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
